# analise-de-algoritimo

./: README.md  compare_sort.py  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json
SortMethods/: __init__.py  buble_sort.py  quick_sort.py
tests/: __init__.py  test_sorted.py
utils/: utils.py
