[tool.poetry]
name = "atv_ava-grafos-e-analise-de-algoritimos"
version = "0.1.0"
description = "algoritimos usados para a atividade avaliativa da materia de grafos e analise de algoritimos do iesb"
authors = ["Vinicius Telheiro <vinitelheiro.academico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
